Implement PR suggestions